Fix code formatting on ios

--- a/static/css/jmklam-portfolio.css
+++ b/static/css/jmklam-portfolio.css
@@ -9,6 +9,14 @@ body {
 	background-color: #ffffff
 }
 
+/* Fixes iOS font sizing anomaly */
+code {
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
 .row h4 {
 	line-height: 1.4;
 	color: #888
